tests/baselines/reference/constWithNonNull.errors.txt
tests/cases/compiler/constWithNonNull.ts(4,1): error TS2588: Cannot assign to 'x' because it is a constant.


==== tests/cases/compiler/constWithNonNull.ts (1 errors) ====
    // Fixes #21848
    
    declare const x: number | undefined;
    x!++;
    ~
!!! error TS2588: Cannot assign to 'x' because it is a constant.
    